--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.25",
     "jwt-decode": "^4.0.0",
+    "notistack": "^3.0.2",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-csv": "^2.2.2",
